# APP-GRAPHICS-IRIT

./: INSTALL_readme.1st  Makefile.am  README.md  disclaim  irit.def  iritD.def  makefile.ami  makefile.gnux  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  makeflag.ami  makeflag.cygwin  makeflag.gnux  makeflag.os2  makeflag.sas  makeflag.unx  makeflag.wce  makeflag.wnt  makeflag.wnt_vc10  makeflag.wnt_vc6  makeflag.wnt_vc7  makeflag.wnt_vc8  makeflag.wnt_vc9  maketags.bat
aisoshad/: Makefile.am  aisoshad.c  aisoshad.cfg  izebra.c  izebra.cfg  lineshad.c  lineshad.cfg  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wnt  program.h  test-unx  test-wnt.cmd  zbufcrvs.c
cagd_lib/: Makefile.am  afd_cube.c  bez_clip.c  blossom.c  bsp2poly.c  bsp_gen.c  bsp_knot.c  bspboehm.c  bspcoxdb.c  bzr2poly.c  bzr_gen.c  bzr_intr.c  bzr_pwr.c  cagd1gen.c  cagd2gen.c  cagd2pl2.c  cagd2ply.c  cagd_arc.c  cagd_aux.c  cagd_cci.c  cagd_cnc.c  cagd_dbg.c  cagd_err.c  cagd_ftl.c  cagd_loc.h  cagdbbox.c  cagdbsum.c  cagdcmpt.c  cagdcmrg.c  cagdcoer.c  cagdcsrf.c  cagdedit.c  cagdextr.c  cagdmesh.c  cagdoslo.c  cagdprim.c  cagdruld.c  cagdsmrg.c  cagdsrev.c  cagdswep.c  (+25 more)
config/: AUTHORS  COPYING  Makefile.am  configure.in  irit.spec  organize_dirs.sh  organize_dirs_inv.sh
filters/: 3ds2irit.c  Makefile.am  dat2bin.c  dat2irit.c  dxf2irit.c  igs2irit.c  irit2dxf.c  irit2hgl.c  irit2igs.c  irit2iv.c  irit2nff.c  irit2obj.c  irit2off.c  irit2plg.c  irit2pov.c  irit2ps.c  irit2ray.c  irit2scn.c  irit2stl.c  irit2wrl.c  irit2xfg.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wnt  obj2irit.c  off2irit.c  skeletn1.c  stl2irit.c  test-unx  test-wnt.cmd
geom_lib/: Makefile.am  analyfit.c  anim_aux.c  animate.c  bbox.c  cnvxhull.c  convex.c  decimate.c  dist_pts.c  fit1pts.c  fit2pts.c  geom_bsc.c  geom_err.c  geom_ftl.c  geom_loc.h  geomat3d.c  geomvals.c  intrnrml.c  ln_sweep.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  merge.c  ms_circ.c  ms_spher.c  plycrvtr.c  plyimprt.c  plystrct.c  poly_cln.c  poly_cvr.c  poly_pts.c  poly_sil.c  polyofst.c  polyprop.c  polysimp.c  polysmth.c  primitv1.c  (+11 more)
grapdrvs/: Makefile.am  amidrvs.c  amidrvs.cfg  cnstcrvs.c  cnstcrvs.h  ddm_vshd.cg  djgdrvs.c  djggraph.c  djggraph.h  draw_obj.c  drawaiso.c  drawln3d.c  drawpoly.c  drawptvc.c  editcrvs.c  editcrvs.h  editmanp.c  editmanp.h  editsrfs.c  editsrfs.h  ffd_shdr.cg  gen_grap.c  glutdrvs.c  glutdrvs.cfg  glutdrvs.h  grap_loc.h  hpsbutil.c  magellan.c  magellan.h  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  nuldrvs.c  nuldrvs.cfg  ogl_fbo.c  ogl_fbo.h  oglesemu.c  (+41 more)
include/: Makefile.am  allocate.h  attribut.h  bool_lib.h  cagd_lib.h  ext_lib.h  extra_fn.h  filt.h  geom_lib.h  grap_lib.h  ip_cnvrt.h  irit_sm.h  iritprsr.h  irt_clr.h  mdl_lib.h  misc_lib.h  miscattr.h  mrchcube.h  mvar_lib.h  obj_dpnd.h  rndr_lib.h  symb_lib.h  trim_lib.h  triv_lib.h  trng_lib.h  user_lib.h
irit/: Makefile.am  bsc_geom.c  bsc_geom.h  ctrl-brk.c  ctrl-brk.h  dosintr.c  dosintr.h  freeform.h  freefrm1.c  freefrm2.c  freefrm3.c  freefrm4.c  freefrm5.c  freefrm6.c  freefrm7.c  freefrm8.c  inptevl0.c  inptevl1.c  inptevl2.c  inptevl3.c  inptevl4.c  inptgetc.c  inptprsg.h  inptprsl.h  inptprsr.c  irit-djg.cfg  irit-dos.cfg  irit-unx.cfg  irit-wnt.cfg  irit.c  irit_db.c  irit_io.c  iritfont.itd  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wnt  objects.h  objects1.c  (+5 more)
mdl_lib/: Makefile.am  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  mdl2bool.c  mdl_aux.c  mdl_bbox.c  mdl_bool.c  mdl_dbg.c  mdl_dum.c  mdl_err.c  mdl_ftl.c  mdl_gen.c  mdl_loc.h  mdl_prim.c  mdl_ptch.c  mdlcnvrt.c
misc_lib/: Makefile.am  bipartte.c  config.c  dither.c  editimag.c  exprtree.c  getarg.c  gnrl_mat.c  hash2tbl.c  hash_tbl.c  hmgn_mat.c  imalloc.c  imgstcvr.c  irit2ftl.c  irit2inf.c  irit2wrn.c  irit_ftl.c  irit_inf.c  irit_wrn.c  levenmar.c  list.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  mincover.c  misc_err.c  misc_ftl.c  misc_loc.h  miscatt2.c  miscatt3.c  miscattr.c  priorque.c  qrfactor.c  readimag.c  search.c  writimag.c  xgeneral.c
mvar_lib/: Makefile.am  contacts.c  crv_krnl.c  hasdrf2d.c  hasdrf3d.c  lnsrfdst.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  ms_circ.c  ms_sphr.c  mv_crvtr.c  mvaccess.c  mvar_aux.c  mvar_dbg.c  mvar_der.c  mvar_det.c  mvar_err.c  mvar_ftl.c  mvar_gen.c  mvar_int.c  mvar_loc.h  mvar_pll.c  mvar_ref.c  mvar_rev.c  mvar_ssi.c  mvar_sub.c  mvar_sym.c  mvar_vec.c  mvarcmpt.c  mvarcoer.c  mvardist.c  mvaredit.c  mvareval.c  mvarextr.c  mvarintr.c  mvarkant.c  (+31 more)
prsr_lib/: Makefile.am  allocate.c  attribut.c  bsp_read.c  bsp_wrt.c  bzr_read.c  bzr_wrt.c  cagd_wrt.c  cagdread.c  cnv2irit.c  coerce.c  ff_cnvrt.c  igs_irit.c  ip_cnvrt.c  ip_procs.c  ipc_loc.h  irit_cnc.c  irit_dxf.c  irit_igs.c  irit_obj.c  irit_stl.c  iritprs1.c  iritprs2.c  iritprsb.c  iritprsc.c  iritprsd.c  iritvrml.c  iritwcnc.c  linklist.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  mdl_read.c  mdl_wrt.c  mvar_wrt.c  mvarread.c  obj_dpnd.c  (+17 more)
rndr_lib/: Makefile.am  color.c  color.h  fstalloc.c  fstalloc.h  interpol.c  interpol.h  lights.c  lights.h  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  nc_zbufr.c  object.c  object.h  polyline.c  polyline.h  report.c  rndr_lib.c  rndr_loc.h  scene.c  scene.h  stencil.c  stencil.h  texture.c  texture.h  triangle.c  triangle.h  vis_maps.c  vis_maps.h  zbuffer.c  zbuffer.h  zbufr_1d.c
symb_lib/: Makefile.am  adap_iso.c  arc_len.c  biarc.c  blending.c  bsp3injc.c  bsp_sym.c  bspiprod.c  bspkntrm.c  bzr_sym.c  ccnvhul.c  cmp_crvs.c  composit.c  constrct.c  crv_lenv.c  crv_skel.c  crv_tans.c  crvtrrec.c  curvatur.c  decompos.c  distance.c  duality.c  evalcurv.c  ffptdist.c  makefile.ami  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  moffset.c  (+20 more)
(+1163 files in other folders)
