INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritCagd.la
libIritCagd_la_SOURCES = \
	afd_cube.c  bspcoxdb.c  bzr_intr.c	\
	cagd2ply.c  cagd_cci.c  cagdcsrf.c	\
	cagd_ftl.c  cagdsmrg.c  cbsp_fit.c	\
	cpwr_aux.c  poly_err.c  sbzreval.c	\
	bez_clip.c  bsp_gen.c   bzr_pwr.c	\
	cagd_arc.c  cagdcmpt.c  cagd_dbg.c	\
	cagdmesh.c  cagdsrev.c  cbsp_int.c	\
	crvmatch.c  sbsp_aux.c	blossom.c	\
	bsp_knot.c  cagd1gen.c  cagd_aux.c	\
	cagdcmrg.c  cagdedit.c  cagdoslo.c	\
	cagdswep.c  cbzr_aux.c  hermite.c	\
	sbspeval.c  bsp2poly.c  bzr2poly.c	\
	cagd2gen.c  cagdbbox.c  cagd_cnc.c	\
	cagd_err.c  cagdprim.c  cbsp_aux.c	\
	cbzreval.c  mshplanr.c  sbsp_int.c	\
	bspboehm.c  bzr_gen.c   cagd2pl2.c	\
	cagdbsum.c  cagdcoer.c  cagdextr.c	\
	cagdruld.c  cbspeval.c  cbzr_tbl.c	\
	cbzr2tbl.c  nrmleval.c  sbzr_aux.c

libIritCagd_la_LDFLAGS = -version-info 0:0:0
EXTRA_DIST = cagd_loc.h
