INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritGeom.la
libIritGeom_la_SOURCES = \
	analyfit.c  cnvxhull.c  fit1pts.c	\
	geom_err.c  ln_sweep.c  plycrvtr.c	\
	poly_cvr.c  poly_sil.c  primitv3.c	\
	sph_cone.c  zbuf_ogl.c	animate.c	\
	convex.c    fit2pts.c   geom_ftl.c	\
	merge.c     plyimprt.c  polyofst.c	\
	polysimp.c  pt_morph.c  sph_pts.c	\
	anim_aux.c  decimate.c  geomat3d.c	\
	geomvals.c  ms_circ.c   plystrct.c	\
	polyprop.c  polysmth.o  primitv1.c  quatrnn.c	\
	text.c      bbox.c      dist_pts.c	\
	geom_bsc.c  intrnrml.c  ms_spher.c	\
	poly_cln.c  poly_pts.c  primitv2.c	\
	scancnvt.c  zbuffer.c	sbdv_srf.c			


libIritGeom_la_LDFLAGS = -version-info 0:0:0
EXTRA_DIST = geom_loc.h
