include_HEADERS = \
	allocate.h  attribut.h  bool_lib.h	\
	cagd_lib.h  extra_fn.h  filt.h		\
	geom_lib.h  grap_lib.h  ip_cnvrt.h	\
	iritprsr.h  irit_sm.h   irt_clr.h	\
	mdl_lib.h   miscattr.h  misc_lib.h	\
	mrchcube.h  mvar_lib.h  obj_dpnd.h	\
	rndr_lib.h  symb_lib.h  trim_lib.h	\
	triv_lib.h  trng_lib.h  user_lib.h
EXTRA_DIST = ext_lib.h
