INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritMdl.la
libIritMdl_la_SOURCES = mdl_aux.o  mdl_bbox.c mdl_bool.o mdl2bool.o  mdlcnvrt.c  mdl_dbg.c  mdl_dum.c  mdl_err.c  mdl_ftl.c  mdl_gen.c  mdl_prim.o mdl_ptch.c
libIritMdl_la_LDFLAGS = -version-info 0:0:0



EXTRA_DIST = mdl_loc.h
