INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritMisc.la
libIritMisc_la_SOURCES = \
	bipartte.c  config.c    dither.c irit2inf.c  miscattr.c	\
	editimag.c  irit2wrn.c  misc_err.c	\
	exprtree.c  irit_ftl.c  misc_ftl.c	\
	getarg.c    irit_inf.c  priorque.c	\
	gnrl_mat.c  irit_wrn.c  qrfactor.c	\
	hash_tbl.c  levenmar.c  readimag.c	\
	hmgn_mat.c  mincover.c  search.c	\
	imalloc.c   miscatt2.c  writimag.c	\
	irit2ftl.c  miscatt3.c  xgeneral.c	\
	hash2tbl.o  list.o      imgstcvr.o


libIritMisc_la_LDFLAGS = -version-info 0:0:0
EXTRA_DIST = misc_loc.h

