INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritMvar.la
libIritMvar_la_SOURCES = \
	contacts.o crv_krnl.c   lndstsqr.c mvarintr.c  mvarkant.c mvbzrpwr.c	\
	hasdrf2d.c  mvarmrph.c  mvbzrsym.c	\
	hasdrf3d.c  mvarpack.c  mvcones.c	\
	ms_circ.c   mvarpck2.c  mv_crvtr.c	\
	ms_sphr.c   mvar_pll.c  mvlowenv.c	\
	mvaccess.c  mvarprim.c  mvarproj.c mvsplmon.c	\
	mvar_aux.c  mvarrais.c  mvtangnt.c	\
	mvarcmpt.c  mvar_ref.c  mvtrmbis.c	\
	mvarcoer.c  mvar_rev.c  mvtrmpcr.c	\
	mvar_dbg.c  mvar_ssi.c  mvvorcel.c	\
	mvar_der.c  mvar_sub.c  mvvorcrv.c	\
	mvar_det.c  mvar_sym.c  offset2.c	\
	mvardist.c  mvartopo.c  offst2ni.c	\
	mvaredit.c  mvarzero.c  ray-trap.c	\
	mvar_err.c  mvarzral.c  raytrp3d.c	\
	mvareval.c  mvarzreq.c  selfintr.c	\
	mvarextr.c  mvbiscon.c  skel2d.c	\
	mvar_ftl.c  mvbisect.c  mvar_gen.c mvar_int.c	\
	mvbspsym.c  mvtrivar.c 	mvar_vec.c


libIritMvar_la_LDFLAGS = -version-info 0:0:0

EXTRA_DIST = mvar_loc.h
