INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritRndr.la
libIritRndr_la_SOURCES = color.c  fstalloc.c  interpol.c  lights.c  nc_zbufr.c  object.c  polyline.c  report.c  rndr_lib.c  scene.c  stencil.c  texture.c  triangle.c  vis_maps.c zbuffer.c  zbufr_1d.c
libIritRndr_la_LDFLAGS = -version-info 0:0:0
EXTRA_DIST = color.h fstalloc.h interpol.h lights.h object.h polyline.h rndr_loc.h scene.h stencil.h texture.h triangle.h zbuffer.h
