INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritSymb.la
libIritSymb_la_SOURCES = \
	adap_iso.c  bsp3injc.c  bzr_sym.c	\
	constrct.c  crvtrrec.c  duality.c	\
	moments.c   offset.c    rrinter.c	\
	symb_crv.c  symbpoly.c	arc_len.c	\
	bspiprod.c  ccnvhul.c   crv_lenv.c	\
	curvatur.c  evalcurv.c  morphing.c	\
	orthotom.c  rvrs_eng.c  symb_err.c	\
	symbsply.c	biarc.c     bspkntrm.c	\
	cmp_crvs.c  crv_skel.c  decompos.c	\
	ffptdist.c  multires.c  prisa.c		\
	symb_ftl.c  symb_srf.c	symbzero.c	\
	blending.c  bsp_sym.c   composit.c	\
	crv_tans.c  distance.c  moffset.c	\
	nrmlcone.c  rflct_ln.c  smp_skel.c	\
	symb_gen.c  

libIritSymb_la_LDFLAGS = -version-info 0:0:0



EXTRA_DIST = symb_loc.h
