INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritTrim.la
libIritTrim_la_SOURCES = \
	trim2pl2.c  trim2ply.c  trim_aux.c	\
	trimcntr.c  trim_dbg.c  trim_err.c	\
	trim_ftl.c  trim_gen.c  trim_iso.c	\
	trim_sub.c  tr_prisa.c
libIritTrim_la_LDFLAGS = -version-info 0:0:0

EXTRA_DIST = trim_loc.h
