INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritTrng.la
libIritTrng_la_SOURCES = \
	trng2ply.c  trng_aux.c  trngcoer.c	\
	trng_dbg.c  trng_der.c  trng_err.c	\
	trngeval.c  trng_ftl.c  trng_gen.c	\
	trng_grg.c  trng_iso.c  trngmesh.c	\
	trng_sub.c
libIritTrng_la_LDFLAGS = -version-info 0:0:0

EXTRA_DIST = trng_loc.h
